--- a/index.html
+++ b/index.html
@@ -78,7 +78,218 @@
             </div>
           </div>
         </div>
-        <div class="main-section"></div>
+        <div class="main-section">
+          <div class="first-title-main">
+            <h2 class="title-main">What We Do</h2>
+            <p class="description-title-main">
+              Problems trying to resolve the conflict between
+              the two major realms of Classical physics: Newtonian mechanics
+            </p>
+          </div>
+          <div class="info-area-main">
+            <div class="box busines-part">
+              <i class="bi bi-briefcase"></i>
+              <p class="busines-paragraph">Business & Finance</p>
+            </div>
+            <div class="box consumer-part">
+              <i class="bi bi-shop-window"></i>
+              <p class="consumer-paragraph">Consumer Products</p>
+            </div>
+            <div class="box money-part">
+              <i class="bi bi-journal-text"></i>
+              <p class="money-paragraph">Save money and time</p>
+            </div>
+          </div>
+        </div>
+        <div class="practice-advice-section">
+          <div class="first-title-practice">
+            <h2 class="title-practice-section">Practice Advice</h2>
+            <p class="description-title-practice">
+              Problems trying to resolve the conflict between
+              the two major realms of Classical physics: Newtonian mechanics
+            </p>
+          </div>
+            <div class="practice-box-container">
+              <div class="img-info-box-practice">
+                <div class="img-info-top-part">
+                  <h5 class="practice-box-title">A single source of truth</h5>
+                  <p class="practice-box-paragraph">Newton thought that light was made up of particles, but then it was discovered</p>
+                </div>
+                <div>
+                  <img src="imgs/cover.jpg"/>
+                </div>
+              </div>
+              <div class="img-info-box-practice">
+                <div class="img-info-top-part">
+                  <h5 class="practice-box-title">Fastest way to organize</h5>
+                  <p class="practice-box-paragraph">"Quantum mechanics" is the description of the behaviour of master</p>
+                </div>
+                <div>
+                  <img src="imgs/cover (1).jpg"/>
+                </div>
+              </div>
+              <div class="img-info-box-practice">
+                <div class="img-info-top-part">
+                  <h5 class="practice-box-title">Fastest way to take action</h5>
+                  <p class="practice-box-paragraph">They describe a universe consisting of bodies moving</p>
+                </div>
+                <div>
+                  <img src="imgs/cover (2).jpg"/>
+                </div>
+              </div>
+              <div class="img-info-box-practice"> 
+                <div class="img-info-top-part">
+                  <h5 class="practice-box-title">Work better together</h5>
+                  <p class="practice-box-paragraph">They finally obtained a consistent description of the behaviour</p>
+                </div>
+                <div>
+                  <img src="imgs/cover (3).jpg"/>
+                </div>
+              </div>
+            </div>
+        </div>
+        <div class="info-description-section">
+          <div class="first-title-main">
+            <h2 class="title-main">Who We Are</h2>
+            <p class="description-title-main">
+              Problems trying to resolve the conflict between
+              the two major realms of Classical physics: Newtonian mechanics
+            </p>
+          </div>
+          <div class="info-wideo-container">
+            <div class="wideo-part-area">
+              <div class="wideo-circle">
+                <i class="bi bi-play"></i>
+              </div>
+            </div>
+            <div class="info-part-area">
+              <div class="wideo-right-part-description">
+                <h2 class="wideo-right-part-title">Most trused in our field</h2>
+                <p class="wideo-right-part-paragraph">Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule</p>
+              </div>
+              <div class="info-second-part-area">
+                <div>
+                  <div class="icon-display-part">
+                    <i class="bi bi-people-fill"></i><div class="icon-info-part"><h2 class="icon-info-second-title">the quick  fox jumps over the lazy dog</h2>
+                  <p>Things on a very small scale ...</p></div>
+                </div>
+                <div class="icon-display-part">
+                  <i class="bi bi-speedometer2"></i><div class="icon-info-part"><h2 class="icon-info-second-title">the quick  fox jumps over the lazy dog</h2>
+                  <p>Things on a very small scale ...</p></div>
+                </div>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="logo-section">
+          <div class="logo-container">
+            <div class="vector-container">
+              <img src="imgs/Vector.png" alt="img" />
+              <img src="imgs/Vector (1).png" alt="img" />
+              <img src="imgs/Vector (2).png" alt="img" />
+              <img src="imgs/Vector (3).png" alt="img" />
+              <img src="imgs/Vector (4).png" alt="img" />
+              <img src="imgs/Vector (5).png" alt="img" />
+            </div>
+
+          </div>
+          <div class="subscribe-container">
+            <div class="subscribe-area">
+              <div><h3 class="subscribe-form-text">Subscribe For Latest Newsletter</h3></div>
+              <div class="input-form-text">
+                <input type="email" placeholder="Your Email" /> 
+                <div>Subscribe</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="last-section">
+              <div class="last-section-first-part">
+                <h2 class="title-main">Get in Touch</h2>
+                <p class="description-title-main">
+                  Problems trying to resolve the conflict between
+                  the two major realms of Classical physics: Newtonian mechanics
+                </p>
+            </div>
+              <div class="last-section-second-part">
+                <div class="fisrt-info-second-part">
+                  <i class="bibi bi-telephone"></i>
+                  <h6 class="first-info-title">georgia.young@example.com</h6>
+                  <h6 class="first-info-title">georgia.young@ple.com</h6>
+                  <h5 class="first-info-support">Get Support</h5>
+                  <button class="first-info-btn">Submit Request</button>
+                </div>
+                <div class="second-info-second-part">
+                  <i class="bib bi-geo-alt"></i>
+                  <h6 class="second-info-title">georgia.young@example.com</h6>
+                  <h6 class="second-info-title">georgia.young@ple.com</h6>
+                  <h5 class="second-info-support">Get Support</h5>
+                  <button class="second-info-btn">Submit Request</button>
+                </div>
+                <div class="third-info-second-part">
+                  <i class="bibi bi-cursor"></i>
+                  <h6 class="first-info-title">georgia.young@example.com</h6>
+                  <h6 class="first-info-title">georgia.young@ple.com</h6>
+                  <h5 class="first-info-support">Get Support</h5>
+                  <button class="first-info-btn">Submit Request</button>
+                </div>
+              </div>
+        </div>
+        <div class="footer-section">
+          <div class="footer-first-part">
+            <div class="footer-first-part-title">
+              <h3>Consulting Agency For Your Busines</h3>
+              <p>the quick fox jumps over the lazy dog</p>
+            </div>
+            <button class="footer-first-part-button">Contact Us</button>
+          </div>
+          <div class="footer-second-part">
+            <div class="footer-links">
+              <h5>Company Info</h5>
+              <a href="#">About Us</a>
+              <a href="#">Carrier</a>
+              <a href="#">We are hiring</a>
+              <a href="#">Blog</a>
+            </div>
+            <div class="footer-links">
+              <h5>Company Info</h5>
+              <a href="#">About Us</a>
+              <a href="#">Carrier</a>
+              <a href="#">We are hiring</a>
+              <a href="#">Blog</a>
+            </div>
+            <div class="footer-links">
+              <h5>Features</h5>
+              <a href="#">Business Marketing</a>
+              <a href="#">User Analytic</a>
+              <a href="#">Live Chat</a>
+              <a href="#">Unlimited Support</a>
+            </div>
+            <div class="footer-links">
+              <h5>Resources</h5>
+              <a href="#">Ios & Android</a>
+              <a href="#">Watch a Demo</a>
+              <a href="#">Customers</a>
+              <a href="#">API</a>
+            </div>
+            <div class="footer-links">
+              <h5>Get in Touch</h5>
+              <div><i class="bi bi-telephone"></i><h6>(480) 555-0103</h6></div>
+              <div><i class="bi bi-geo-alt"></i><h6>4517 Washington Ave.</h6></div>
+              <div><i class="bi bi-cursor"></i><h6>debra.holt@example.com</h6></div>
+            </div>
+          </div>
+          <div class="footer-third-part">
+            <div>Made With Love By figmaland All Right Reserved</div>
+            <div class="logo-pages">
+              <img src="imgs/facebook.png" alt="img" />
+              <img src="imgs/instagram.png" alt="img" />
+              <img src="imgs/twitter.png" alt="img" />
+              <img src="imgs/youtube.png" alt="img" />
+            </div>
+          </div>
+        </div>
         </div>
       </header>
     </div>
